--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,7 +24,29 @@
           <input type="password" id="password" name="password" value="">
           <i class="fas fa-lock fa-lg"></i>
         </div>
-        <a href="#">رمز عبور خود را فراموش کرده اید؟</a>
+        <a href="#" class="forget-pass">رمز عبور خود را فراموش کرده اید؟</a>
+        <div class="signUp-div">
+            <input type="radio" name="user-type" id="researcher" value="researcher">
+            <label for="researcher" class="user-type researcher text-center">
+                <img src="img/research.png" alt="researcher">
+                پژوهشگر
+            </label>
+            <input type="radio" name="user-type" id="expert" value="expert">
+            <label for="expert" class="user-type expert text-center">
+                <img src="img/mind.png" alt="expert">
+                استاد
+            </label>
+            <input type="radio" name="user-type" id="industry" value="industry">
+            <label for="industry" class="user-type industry text-center">
+                <img src="img/settings.png" alt="industry">
+                صنعت
+            </label>
+        </div>
+        <div class="email">
+            <label for="email">پست الکترونیکی</label>
+            <input type="text" id="email" name="email" value="">
+            <i class="fas fa-at fa-lg"></i>
+        </div>
         <button type="button" name="enter" class="Enter-btn">ورود</button>
         <div class="hr"></div>
         <p>کاربر جدید هستید؟    <a href="#">عضویت</a></p>
