--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,17 +28,17 @@
         <div class="signUp-div">
             <input type="radio" name="user-type" id="researcher" value="researcher">
             <label for="researcher" class="user-type researcher text-center">
-                <img src="img/research.png" alt="researcher">
+                <img src="{% static 'img/research.png' %}" alt="researcher">
                 پژوهشگر
             </label>
             <input type="radio" name="user-type" id="expert" value="expert">
             <label for="expert" class="user-type expert text-center">
-                <img src="img/mind.png" alt="expert">
+                <img src="{% static 'img/mind.png' %}" alt="expert">
                 استاد
             </label>
             <input type="radio" name="user-type" id="industry" value="industry">
             <label for="industry" class="user-type industry text-center">
-                <img src="img/settings.png" alt="industry">
+                <img src="{% static 'img/settings.png' %}" alt="industry">
                 صنعت
             </label>
         </div>
