--- a/templates/registration/user_pass.html
+++ b/templates/registration/user_pass.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div class="card">
-    <img src="img/logo.png" alt="ChamranLogo">
+    <img src="{% static 'img/logo.png' %}" alt="ChamranLogo">
     <p class="ChamranTeam">چمران تیم</p>
     <div class="username">
         <label for="username">نام کاربری</label>
