--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -49,7 +49,7 @@
         </div>
         <button type="button" name="enter" class="Enter-btn">ورود</button>
         <div class="hr"></div>
-        <p>کاربر جدید هستید؟    <a href="#">عضویت</a></p>
+        <p class="new-user">کاربر جدید هستید؟    <a href="#" onclick='signUp()' >عضویت</a></p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
