--- a/researcher/static/researcher/css/style.css
+++ b/researcher/static/researcher/css/style.css
@@ -27,7 +27,7 @@ body {
   -moz-border-radius: 50%;
   border-radius: 50%;
   background-color: #fdfdfd;
-  color: #bdbdbd;
+  color: #6f7285;
   border: 1px solid #bdbdbd;
 }
 .upload > i{
@@ -52,7 +52,7 @@ img{
 #upload-input{
   display: none;
 }
-.mainInfo-body{
+.mainInfo-body, .dialog-main{
   position: fixed;
   top: 0;
   left: 0;
@@ -65,7 +65,7 @@ img{
   filter: blur(10px);
   opacity: 0.9;
 }
-.mainInfo{
+.mainInfo, .dialog{
   position: absolute;
   top: 50%;
   left: 50%;
@@ -78,7 +78,7 @@ img{
 input, textarea, select{
   background-color: #fdfdfd;
   border: 1px solid #bdbdbd;
-  color: #bdbdbd;
+  color: #6f7285;
   border-radius: 5px;
   margin-top: 20px;
   direction: rtl;
@@ -97,14 +97,14 @@ label{
   position: absolute;
   top: 28px;
   right: 25px;
-  color: #bdbdbd;
+  color: #6f7285;
   transition: 300ms all ease;
 }
 i.fa-plus{
   position: absolute;
   top: 33px;
   left: 25px;
-  color: #bdbdbd;
+  color: #6f7285;
   cursor: pointer;
 }
 .rankDiv{
@@ -113,7 +113,7 @@ i.fa-plus{
 .rankLabel{
   position: relative;
   border-radius: 0 5px 5px 0;
-  background-color: #cccccc;
+  background-color: #6f7285;
   color: #fdfdfd;
   top: 20px;
   right: 0;
@@ -138,7 +138,7 @@ i.fa-plus{
 }
 .uni-item{
   display: block;
-  color: #bdbdbd;
+  color: #6f7285;
   background-color: #fdfdfd;
   padding: 5px;
   margin: 0 5px;
@@ -361,10 +361,10 @@ hr{
   direction: rtl!important;
 }
 .label{
-  color: #bdbdbd;
+  color: #6f7285;
 }
 .top-msg > .fa-envelope{
-  color: #bdbdbd;
+  color: #6f7285;
 }
 .top-msg > .fa-envelope:hover{
   color: #3CCD1C;
@@ -408,7 +408,7 @@ hr{
 }
 .sub-header{
   font-family: Shabnam-Light;
-  color: #bdbdbd;
+  color: #6f7285;
 }
 ::-webkit-scrollbar {
   width: 10px;
@@ -452,7 +452,7 @@ hr{
   color: #bdbdbd;
 }
 table{
-  color: #bdbdbd;
+  color: #6f7285;
   margin: auto;
 }
 td{
@@ -575,4 +575,39 @@ span.star-warning:after{
 }
 input[name="foreign_work"]+label:hover , input[name="foreign_work"]:checked+label{
   border-radius: 50%;
+}
+.dialog-main{
+  display: none;
+}
+.dialog{
+  padding-bottom: 30px;
+}
+.close > i{
+  position: absolute;
+  top: -4px;
+  left: 10px;
+  color: #6d6d6d;
+}
+.close > i:hover{
+  cursor: pointer;
+  color: #ff4545;
+}
+input#search_technique{
+    position: absolute;
+    top: 0;
+    left: 10px;
+    padding-left: 30px;
+    margin: 0;
+}
+input#search_technique+label{
+    position: absolute;
+    top: 10px;
+    left: 15px;
+    width: fit-content;
+    right: auto;
+}
+.fa-search:hover{
+  cursor: pointer;
+  color: #3CCD1C;
+
 }
