--- a/expert/templates/expert/layouts/base_layout.html
+++ b/expert/templates/expert/layouts/base_layout.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
       {% block title %}{% endblock %}
       {% load static %}
+    <link rel="icon" href="{% static 'expert/img/logo.ico' %}">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
     {% block header %}{% endblock %}
       <link rel="stylesheet" href="{% static 'expert/css/style.css' %}">
   </head>
   <body>
+  {% block dialog%}{% endblock %}
   {% block initial_information %}{% endblock %}
   <div class="main {% block blur %}{% endblock %}">
     <div class="top-bar">
