--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -4,8 +4,12 @@
 {% block header %}
     <link rel="stylesheet" href="{% static 'expert/css/persian-datepicker.min.css' %}">
     <link rel="stylesheet" href="{% static 'expert/css/datepicker-style.css' %}">
+    <link href="{% static 'expert/css/fancytree-style.css' %}" rel="stylesheet">
 {% endblock %}
 {% block name %}رضا باسره{% endblock %}
+{% block dialog %}
+    {% include 'expert/layouts/dialog.html' %}
+{% endblock %}
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
@@ -256,8 +260,26 @@
                                 <textarea dir="rtl" class="w-100" rows="4" placeholder="اینجا وارد کنید ..." style="margin-top: 0;"></textarea>
                             </div>
                         </div>
-
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <span class="sub-header">لطفا در صورت تسلط بر زبانهای خارجی، زبان مورد نظر و مقدار تسلط خود را ذکر بفرمایید.</span>
+                                <textarea dir="rtl" class="w-100" rows="4" placeholder="اینجا وارد کنید ..." style="margin-top: 0;"></textarea>
+                            </div>
+                        </div>
                     </div>
+                    <div class="inner-card card">
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <span class="label header">تکنیک ها</span>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <button class="chamran_btn technique" type="button">افزودن</button>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="chamran_btn" style="left: 0;bottom: -1px;">اعمال تغییرات</button>
                 </form>
             </div>
         </div>
@@ -265,4 +287,5 @@
 {% endblock %}
 {% block script %}
     <script type="text/javascript" src="{% static 'expert/js/persian-datepicker.min.js' %}"></script>
+    <script src="//cdn.jsdelivr.net/npm/jquery.fancytree@2.27/dist/jquery.fancytree-all-deps.min.js"></script>
 {% endblock %}
