--- a/industry/templates/industry/newProject.html
+++ b/industry/templates/industry/newProject.html
@@ -2,9 +2,11 @@
 {% load static %}
 {% block title %}<title>پذیرش پروژه</title>{% endblock %}
 {% block header %}
-    <link rel="stylesheet" href="{% static 'industry/css/rangeslider.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/css/ion.rangeSlider.min.css"/>
+    <link rel="stylesheet" href="{% static 'industry/css/inputTags.min.css' %}">
 {% endblock %}
 {% block name %}رضا باسره{% endblock %}
+
 {% block content %}
     <div class="row">
         <div class="col-lg-12">
@@ -22,38 +24,19 @@
                                 <input id="latin_label" type="text" name="latin_label" class="w-100">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <label for="keys">کلید واژه ها</label>
-                                <input type="text" id="keys" class="w-100">
-                                <i class="fas fa-plus fa-lg"></i>
-                                <div class="selected_keys"></div>
-                            </div>
-                        </div>
-                        <div class="row">
+                        <div class="row" style="margin-top: 5px">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">نحوه انجام پروژه</span>
-                                <div class="row">
-                                    <div class="col-lg-12 text-center">
-                                        <input type="range" name="wet_lab" id="wet_lab" class="w-50">
-                                        <label for="wet_lab">Wet Lab</label>
-                                    </div>
-                                </div>
-                                <div class="row">
-                                    <div class="col-lg-12 text-center">
-                                        <input type="range" name="dry_lab" id="dry_lab" class="w-50">
-                                        <label for="dry_lab">Dry Lab</label>
-                                    </div>
-                                </div>
+                                <span class="sub-header">کلیدواژه ها</span>
+                                <div id="keys" class="w-100"></div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-lg-4 text-right">
-                                <span class="sub-header" style="position: absolute;top: 15px;">روش تحقیق : </span>
+                                <span class="sub-header" style="position: relative;top: 15px;">روش تحقیق : </span>
                             </div>
                             <div class="col-lg-2 text-right">
                                 <input type="radio" id="quantity" name="research_methodology" class="label-check-radio">
-                                <label for="quantity">کمی</label>
+                                <label for="quantity" style="padding: 5px 9px;">کمی</label>
                             </div>
                             <div class="col-lg-2 text-right">
                                 <input type="radio" id="quality" name="research_methodology" class="label-check-radio">
@@ -78,8 +61,12 @@
                         <div class="row">
                             <div class="col-lg-12 text-right">
                                 <span class="sub-header">در صورت حل این مشکل، چه پیشرفتی در شیوه های درمانی / تجهیزات پزشکی / خدمات درمانی یا ... حاصل می شود؟</span>
-                                <br>
-                                <span class="sub-header">آیا پروژه شما از لحاظ مالی نیز سودآور است؟</span>
+                                <textarea class="w-100" rows="5" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <span class="sub-header">برآورد شما از سود مالی این پروژه چگونه است؟</span>
                                 <textarea class="w-100" rows="5" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
                             </div>
                         </div>
@@ -94,8 +81,12 @@
                             <div class="col-lg-12 text-right">
                                 <br>
                                 <span class="sub-header">لطفا راه حل خود را برای حل این مشکل به طور خلاصه توضیح دهید.</span>
-                                <br>
-                                <span class="sub-header"> این راه حل با چه چالش هایی روبه رو است؟</span>
+                                <textarea class="w-100" rows="7" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 text-right">
+                                <span class="sub-header"> این راه حل چه مشکلاتی می‌تواند داشته باشد؟</span>
                                 <textarea class="w-100" rows="7" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
                             </div>
                         </div>
@@ -153,5 +144,9 @@
     </div>
 {% endblock %}
 {% block script %}
-    <script type="text/javascript" src="{% static 'industry/js/rangeslider.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ion-rangeslider/2.3.0/js/ion.rangeSlider.min.js"></script>
+    <script src="{% static 'industry/js/inputTags.jquery.min.js' %}" type="text/javascript"></script>
+    <script type="text/javascript">
+        $('#keys').inputTags();
+    </script>
 {% endblock %}
