--- a/industry/templates/industry/userInfo.html
+++ b/industry/templates/industry/userInfo.html
@@ -70,12 +70,6 @@
                     <div class="inner-card card">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">در طی سال گذشته، گردش مالی شرکت شما به تقریب چقدر بوده است؟</span>
-                                <textarea class="w-100" rows="3" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 text-right">
                                 <span class="sub-header">لطفا چند نمونه از خدمات / محصولاتی را که توسط شرکت شما ارائه می شود، ذکر بفرمایید.</span>
                                 <textarea class="w-100" rows="5" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
                             </div>
@@ -88,8 +82,16 @@
                         </div>
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <span class="sub-header">در طی سال گذشته، بودجه شرکت شما در رابطه با فعالیت های تحقیق و توسعه چقدر بوده است؟</span>
-                                <textarea class="w-100" rows="2" dir="rtl" placeholder="اینجا وارد کنید ..." style="margin-top: 0"></textarea>
+                                <span class="sub-header">
+                                    لطفا اظهارنامه مالیاتی سال گذشته خود را ارسال کنید. همچنین، درصدی از گردش مالی که به تحقیق و توسعه اختصاص داده شده را نیز مشخص بفرمایید.
+                                </span>
+                                <div class="text-center w-100">
+                                    <label class="attach-label">
+                                        <input type="file" name="declaration" class="attach-input">
+                                        <i class="fas fa-cloud-upload-alt"></i>
+                                        <span class="file-name">بارگذاری اظهارنامه مالیاتی ...</span>
+                                    </label>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -98,7 +100,4 @@
             </div>
         </div>
     </div>
-{% endblock %}
-{% block script %}
-    <script type="text/javascript" src="{% static 'expert/js/persian-datepicker.min.js' %}"></script>
 {% endblock %}
