--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
 <div class="card">
     <img src="{% static 'img/logo.png' %}" alt="ChamranLogo">
     <p class="ChamranTeam">چمران تیم</p>
+    
+    {% if user.is_authenticated %}
+        <p>{{user.username}}</p>
+    {% endif %}
+        
     {% block content %}
       
     {% endblock content %}
